syntax = "proto3";

option go_package = "genproto/weatherService";

package weatherService;

service WeatherService {
    rpc GetCurrentWeather(Place) returns (CurrentWeatherResponse) {}
    rpc GetWeatherForecast(Place) returns (WeatherForecastResponse) {}
    rpc ReportWeatherCondition(Place) returns (WeatherConditionResponse) {}
}

message Place {
    string name = 1;
}

message CurrentWeatherResponse {
    int32 temperature = 1;
    float humidity    = 2;
    int32 windSpeed   = 3;
}

message WeatherForecastResponse {
    repeated int32 temperature = 1;
    repeated float humidity    = 2;
    repeated int32 windSpeed   = 3;
}

message WeatherConditionResponse{
    Place place = 1;
    int32 temperature = 2;
    float humidity = 3;
    int32 windSpeed = 4;
    string condition = 5;
}

